RESOLVED FIXED127864
Web Inspector: Deadlock hitting breakpoint while inspecting JSContext
https://bugs.webkit.org/show_bug.cgi?id=127864
Summary Web Inspector: Deadlock hitting breakpoint while inspecting JSContext
Joseph Pecoraro
Reported 2014-01-29 16:03:09 PST
* SUMMARY Deadlock hitting breakpoint while inspecting a JSContext application. -> MainThread -> processing UI event (click a button) -> runs JSContext evaluateScript -> takes API lock -> hit breakpoint -> in nested run loop (idle) -> RWI Dispatch Queue -> receives incoming debugger command -> determines the global object -> APIEntry shim attempting to perform the command (locked) We never continue, because we're waiting for a debugger command, and the debugger command is stuck. The main thread needs to drop the JSLock (API lock) before running the nested event loop.
Attachments
[PATCH] Proposed Fix (1.56 KB, patch)
2014-01-29 16:09 PST, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2014-01-29 16:03:42 PST
Joseph Pecoraro
Comment 2 2014-01-29 16:09:30 PST
Created attachment 222604 [details] [PATCH] Proposed Fix
Geoffrey Garen
Comment 3 2014-01-29 16:24:46 PST
Comment on attachment 222604 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4 2014-01-29 16:56:34 PST
Comment on attachment 222604 [details] [PATCH] Proposed Fix Clearing flags on attachment: 222604 Committed r163051: <http://trac.webkit.org/changeset/163051>
WebKit Commit Bot
Comment 5 2014-01-29 16:56:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.