Web Inspector: Deadlock hitting breakpoint while inspecting JSContext https://bugs.webkit.org/show_bug.cgi?id=127864

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-01-29
Reviewed by Geoffrey Garen.

Temporarily drop the lock while we run the nested runloop.

* inspector/JSGlobalObjectScriptDebugServer.cpp:
(Inspector::JSGlobalObjectScriptDebugServer::runEventLoopWhilePaused):

Canonical link: https://commits.webkit.org/145879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163051 268f45cc-cd09-0410-ab3c-d52691b4dbfc